--- a/index.html
+++ b/index.html
@@ -132,13 +132,15 @@
         </div>
         <!-- ticket booking Section -->
 
-        <div class="bg-white flex justify-center items-center mx-32 rounded-3xl mt-12 gap-16">
-          <div >
+        <div
+          class="bg-white flex justify-center items-center mx-32 rounded-3xl mt-12 gap-16"
+        >
+          <div>
             <div class="flex justify-between">
-              <div class="flex text-gray-950 gap-4 ">
+              <div class="flex text-gray-950 gap-4">
                 <img src="./images/bus-logo.svg" alt="" />
                 <div>
-                  <h1 class="text-3xl font-bold font-['Raleway'] ">
+                  <h1 class="text-3xl font-bold font-['Raleway']">
                     Doyel Poribahan
                   </h1>
                   <p class="text-lg font-normal font-['Inter']">
@@ -214,6 +216,123 @@
             >
               Per Seat
             </h2>
+          </div>
+        </div>
+      </div>
+      <!-- Ticketing Interface -->
+      <div class="mx-32 bg-white rounded-3xl mt-8 grid grid-cols-7">
+        <!-- seat section -->
+        <div class="p-8 col-span-4 space-y-5">
+          <h1 class="text-gray-950 text-2xl font-semibold font-['Raleway']">
+            Select Your Seat
+          </h1>
+          <hr />
+          <div class="text-lg font-medium font-['Inter'] flex justify-between">
+            <div class="flex items-center gap-2 justify-center">
+              <img src="./images/seat-gray.png" alt="" />
+              <p class="text-gray-950 text-opacity-50">Available</p>
+            </div>
+            <div class="flex items-center gap-2 justify-center">
+              <img src="./images/seat-green-filled.png" alt="" />
+              <p class="text-[#1DD100]">Selected</p>
+            </div>
+          </div>
+          <hr />
+          <div class="space-y-6">
+            <div class="flex justify-end">
+              <img
+                class="bg-[#E6E7E8] solid-opacity-10 rounded-xl px-10 py-4"
+                src="./images/tabler-icon-steering-wheel.svg"
+                alt=""
+              />
+            </div>
+            <div class="flex justify-between items-center">
+              <div><h1 class="text-lg font-medium">A</h1></div>
+              <div>
+                <button
+                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                >
+                  A1
+                </button>
+              </div>
+              <div>
+                <button
+                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                >
+                  A2
+                </button>
+              </div>
+              <div>
+                <button
+                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                >
+                  A3
+                </button>
+              </div>
+              <div>
+                <button
+                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                >
+                  A4
+                </button>
+              </div>
+            </div>
+            <div class="flex justify-between items-center">
+              <div><h1 class="text-lg font-medium">B</h1></div>
+              <div>
+                <button
+                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                >
+                  B1
+                </button>
+              </div>
+              <div>
+                <button
+                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                >
+                  B2
+                </button>
+              </div>
+              <div>
+                <button
+                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                >
+                  B3
+                </button>
+              </div>
+              <div>
+                <button
+                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                >
+                  B4
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- form section -->
+        <div class="col-span-3">
+          <h1>Select Your Seat</h1>
+          <hr />
+          <div>
+            <div class="flex justify-between">
+              <p>Seat <span>2</span></p>
+              <p>Class</p>
+              <p>Price</p>
+            </div>
+            <div>
+              <p>Total Price</p>
+              <p>BDT<span>0</span></p>
+
+            </div>
+            <div class="form-control items-center">
+              <div class="input-group">
+                <input type="text" placeholder="Have any copupon?" class="input input-bordered" />
+                <button class="btn bg-[#1DD100] text-white">
+                  Apply
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
