--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button
           class="btn text-gray-950 text-xl font-bold font-['Raleway'] bg-[#1DD100] border-none"
         >
-          Buy Tickets
+          <a href="#ticket-interface">Buy Tickets</a>
         </button>
       </div>
 
@@ -220,7 +220,10 @@
         </div>
       </div>
       <!-- Ticketing Interface -->
-      <div class="mx-32 bg-white rounded-3xl mt-8 grid grid-cols-7">
+      <div
+        id="ticket-interface"
+        class="mx-32 bg-white rounded-3xl mt-8 grid grid-cols-7"
+      >
         <!-- seat section -->
         <div class="p-8 col-span-4 space-y-5">
           <h1 class="text-gray-950 text-2xl font-semibold font-['Raleway']">
@@ -241,7 +244,7 @@
           <div class="space-y-6">
             <div class="flex justify-end">
               <img
-                class="bg-[#E6E7E8] solid-opacity-10 rounded-xl px-10 py-4"
+                class=" bg-[#E6E7E8] solid-opacity-10 rounded-xl px-10 py-4"
                 src="./images/tabler-icon-steering-wheel.svg"
                 alt=""
               />
@@ -250,28 +253,28 @@
               <div><h1 class="text-lg font-medium">A</h1></div>
               <div>
                 <button
-                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                  class="bton bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
                 >
                   A1
                 </button>
               </div>
               <div>
                 <button
-                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                  class="bton bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
                 >
                   A2
                 </button>
               </div>
               <div>
                 <button
-                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                  class="bton bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
                 >
                   A3
                 </button>
               </div>
               <div>
                 <button
-                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                  class="bton bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
                 >
                   A4
                 </button>
@@ -281,28 +284,28 @@
               <div><h1 class="text-lg font-medium">B</h1></div>
               <div>
                 <button
-                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                  class="bton bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
                 >
                   B1
                 </button>
               </div>
               <div>
                 <button
-                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                  class="bton bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
                 >
                   B2
                 </button>
               </div>
               <div>
                 <button
-                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                  class="bton bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
                 >
                   B3
                 </button>
               </div>
               <div>
                 <button
-                  class="bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
+                  class="bton bg-[#F7F8F8] rounded-xl text-[#03071280] text-lg font-medium px-11 py-4"
                 >
                   B4
                 </button>
@@ -311,31 +314,58 @@
           </div>
         </div>
         <!-- form section -->
-        <div class="col-span-3">
-          <h1>Select Your Seat</h1>
-          <hr />
-          <div>
-            <div class="flex justify-between">
-              <p>Seat <span>2</span></p>
+        <div class="col-span-3 p-8">
+          <h1 class="text-gray-950 text-2xl font-semibold font-['Raleway']">
+            Select Your Seat
+          </h1>
+          <hr class="my-6" />
+          <div class="bg-[#F7F8F8] p-8 rounded-xl">
+            <div
+              class="flex justify-between text-gray-950 text-base font-medium font-['Inter']"
+            >
+              <p>
+                Seat
+                <span class="bg-[#1DD100] text-xs px-2 rounded-md text-white"
+                  >2</span
+                >
+              </p>
               <p>Class</p>
               <p>Price</p>
             </div>
-            <div>
+            <hr class="my-4" />
+            <div></div>
+            <hr class="my-4" />
+            <div
+              class="flex justify-between text-gray-950 text-base font-medium font-['Inter']"
+            >
               <p>Total Price</p>
-              <p>BDT<span>0</span></p>
-
+              <p>BDT <span>0</span></p>
             </div>
-            <div class="form-control items-center">
+            <div class="form-control items-center my-5">
               <div class="input-group">
-                <input type="text" placeholder="Have any copupon?" class="input input-bordered" />
-                <button class="btn bg-[#1DD100] text-white">
-                  Apply
-                </button>
+                <input
+                  type="text"
+                  placeholder="Have any copupon?"
+                  class="input input-bordered"
+                />
+                <button class="btn bg-[#1DD100] text-white">Apply</button>
               </div>
             </div>
+            <div
+              class="flex justify-between text-gray-950 text-base font-medium font-['Inter']"
+            >
+              <p>Grand Total</p>
+              <p>BDT <span>0</span></p>
+            </div>
+            <button
+              class="flex w-full py-5 bg-[#1DD100] rounded-2xl justify-center items-center text-white text-xl font-extrabold font-['Raleway'] my-8"
+            >
+              Next
+            </button>
           </div>
         </div>
       </div>
     </main>
+    <script src="./script.js"></script>
   </body>
 </html>
