--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               >
                 <img src="./images/seat-green.png" alt="" />
                 <h2 class="text-[#1DD100] text-lg font-medium font-['Inter']">
-                  40 Seats left
+                  <span id="total-seat">8</span> Seats left
                 </h2>
               </div>
             </div>
@@ -325,8 +325,8 @@
             >
               <p>
                 Seat
-                <span class="bg-[#1DD100] text-xs px-2 rounded-md text-white"
-                  >2</span
+                <span id="booked-seat"  class="bg-[#1DD100] text-xs px-2 rounded-md text-white"
+                  >0</span
                 >
               </p>
               <p>Class</p>
