--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
               </div>
             </div>
             <div id="discount"
-              class="flex justify-between text-gray-950 text-base font-medium font-['Inter']"
+              class="flex justify-between text-gray-950 text-base font-medium font-['Inter'] mb-5"
             >
               
             </div>
