--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <img src="./images/cupon-devider.png" alt="" />
             </div>
             <div class="font-['Raleway']">
-              <h1 class="text-gray-950 text-3xl font-bold">NEW15</h1>
+              <h1 id="st-cpn" class="text-gray-950 text-3xl font-bold">NEW15</h1>
               <h1 class="text-gray-950 text-opacity-40 text-xl font-medium">
                 Coupon Code
               </h1>
@@ -99,7 +99,7 @@
               <img src="./images/cupon-devider.png" alt="" />
             </div>
             <div class="font-['Raleway']">
-              <h1 class="text-gray-950 text-3xl font-bold">Couple 20</h1>
+              <h1 id="nd-cpn" class="text-gray-950 text-3xl font-bold">Couple 20</h1>
               <h1 class="text-gray-950 text-opacity-40 text-xl font-medium">
                 Coupon Code
               </h1>
