--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
           <div class="modal-action">
             <form method="dialog">
               <!-- if there is a button in form, it will close the modal -->
-              <button class="text-white bg-green-500 rounded-3xl btn ">Continue</button>
+              <button onclick="window.location.reload();" class="text-white bg-green-500 rounded-3xl btn ">Continue</button>
             </form>
           </div>
         </div>
